--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ span i {
     color: rgb(0, 255, 0);
 }
 
+span {
+    color: rgb(0, 255, 0);
+}
+
 .overlay {
     position: absolute;
     top: 20px;  /* Adjust as needed */
@@ -43,35 +47,33 @@ p {
     margin: 0;
 }
 
-footer {
-    background-color: rgb(0, 206, 0);
-    color: whitesmoke;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 600;
-    font-size: 16px;
-    margin-top: auto;
-    text-align: center;
-    padding: 10px 0;
-    z-index: 10;
-}
+
 
 
 @media screen and (max-width: 600px) {
     h1 {
-        font-size: 30px;
+        font-size: 24px;
         font-weight: 600;
     }
 
     p {
         font-size: 15px;
-        font-weight: 600;
-        margin: 30px auto;
+        font-weight: 500;
+        margin: 14px auto;
     }
     
     footer {
         font-size: 12px;
     }
     
+}
+
+@media screen and (max-width: 400px) {
+    p {
+        font-size: 13px;
+        font-weight: 500;
+        margin: 14px auto;
+    }
 }
 
 
